feat: serve and weight prices for tea
