# internal/controller/v1/tea.go
@@ -86,18 +86,18 @@ func (c *TeaController) GetTeaById(w http.ResponseWriter, r *http.Request) {
 //	@Tags		Tea
 //	@Accept		json
 //	@Produce	json
-//	@Param		page		query		int						false	"Page number"
-//	@Param		limit		query		int						false	"Page size"
-//	@Param		categoryId	query		string					false	"Category ID"
-//	@Param		name		query		string					false	"Tea name"
-//	@Param		tags[]		query		[]string				false	"Tags"
-//	@Param		isAsc		query		bool					false	"Sort order"
-//	@Param		sortBy		query		teaSchemas.SortByFilter	false	"Sort by field (name, price, rating)"
-//	@Param		price[]		query		[]float64				false	"Price range"
-//	@Param		isDeleted	query		bool					false	"Is deleted"
-//	@Success	200			{object}	schemas.PaginatedResult[teaSchemas.WithRatingResponseModel]
-//	@Failure	400			{object}	errx.AppError
-//	@Failure	500			{object}	errx.AppError
+//	@Param		page			query		int						false	"Page number"
+//	@Param		limit			query		int						false	"Page size"
+//	@Param		categoryId		query		string					false	"Category ID"
+//	@Param		name			query		string					false	"Tea name"
+//	@Param		tags[]			query		[]string				false	"Tags"
+//	@Param		isAsc			query		bool					false	"Sort order"
+//	@Param		sortBy			query		teaSchemas.SortByFilter	false	"Sort by field (name, serve_price, rating)"
+//	@Param		serve_price[]	query		[]float64				false	"ServePrice range"
+//	@Param		isDeleted		query		bool					false	"Is deleted"
+//	@Success	200				{object}	schemas.PaginatedResult[teaSchemas.WithRatingResponseModel]
+//	@Failure	400				{object}	errx.AppError
+//	@Failure	500				{object}	errx.AppError
 //	@Router		/api/v1/teas [get]
 //	@Security	BearerAuth
 func (c *TeaController) GetAllTeas(w http.ResponseWriter, r *http.Request) {
