# internal/entity/tea.go
@@ -8,7 +8,8 @@ import (
 type Tea struct {
 	Id          uuid.UUID `db:"id" json:"id"`
 	Name        string    `db:"name" json:"name"`
-	Price       float64   `db:"price" json:"price"`
+	ServePrice  float64   `db:"serve_price" json:"serve_price"`
+	WeightPrice float64   `db:"weight_price" json:"weight_price"`
 	Description string    `db:"description" json:"description"`
 	CreatedAt   time.Time `db:"created_at" json:"createdAt"`
 	UpdatedAt   time.Time `db:"updated_at" json:"updatedAt"`
