# internal/schemas/teaSchemas/request.go
@@ -8,7 +8,8 @@ import (
 
 type RequestModel struct {
 	Name        string      `json:"name"`
-	Price       float64     `json:"price"`
+	ServePrice  float64     `json:"serve_price"`
+	WeightPrice float64     `json:"weight_price"`
 	Description string      `json:"description"`
 	CategoryId  uuid.UUID   `json:"categoryId"`
 	TagIds      []uuid.UUID `json:"tagIds,omitempty"`
